--- a/src/app/components/admin/list-books/list-books.component.html
+++ b/src/app/components/admin/list-books/list-books.component.html
@@ -1,10 +1,8 @@
-<div class="container">
+<div class="container" *ngIf="!rerender">
   <h1 class="title text-center my-4">Listado de Libros</h1>
   <div class="row">
     <div class="col">
-      <button type="button" data-toggle="modal" data-target="#modalBook" class="btn btn-primary float-right mb-3"
-        (click)="resetForm()">New
-        Book</button>
+      <button class="btn btn-outline-primary float-right mb-3" (click)="open(content)">New Book</button>
       <table class="table table-hover mb-4">
         <thead>
           <tr>
@@ -19,7 +17,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let book of books; index as i">
+          <tr *ngFor="let book of books | paginate: { itemsPerPage: 3, currentPage: currentage }; index as i">
             <th scope="row">{{ i + 1 }}</th>
             <td>{{ book.titulo }}</td>
             <td>{{ book.autor }}</td>
@@ -27,7 +25,7 @@
             <td>{{ book.precio }}$</td>
             <td>{{ book.oferta == 1 ? 'SI' : 'NO' }}</td>
             <td>
-              <button (click)="onPreUpdate(book)" class="btn btn-primary" data-toggle="modal" data-target="#modalBook">Update</button>
+              <button (click)="onPreUpdate(book, content)" class="btn btn-info" data-toggle="modal">Update</button>
             </td>
             <td>
               <!-- <a href="/admin/list-books" (click)="onDeleteBook(book.id)" class="btn btn-danger">Delete</a> -->
@@ -36,8 +34,11 @@
           </tr>
         </tbody>
       </table>
+      <pagination-controls (pageChange)="currentage = $event"></pagination-controls>
     </div>
   </div>
 </div>
 
-<app-modal></app-modal>
+<ng-template #content let-modal>
+  <app-modal [reload]='doRerender'></app-modal>
+</ng-template>
