--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,67 +1,62 @@
-<!-- Modal -->
-<div class="modal fade" id="modalBook" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"
-  #thisModal>
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">New Book</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form class="form-book" #formBook="ngForm" (ngSubmit)='onSaveBook(formBook)'>
+<div class="modal-content">
+  <div class="modal-header">
+    <h5 class="modal-title" id="exampleModalLabel">{{ !this.dataApi.selectedBook.id ? 'New Book' : 'Update Book' }}</h5>
+    <!-- <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button> -->
+  </div>
 
-          <!-- Campo Oculto de Id -->
-          <input type="hidden" id="bookId" name="bookId" [(ngModel)]="this.dataApi.selectedBook.id">
+  <div class="modal-body">
+    <form class="form-book" #formBook="ngForm" (ngSubmit)='onSaveBook(formBook)'>
 
-          <div class="form-group">
-            <label for="">Titulo</label>
-            <input class="form-control" type="text" id="titulo" name="titulo" placeholder="Titulo" [(ngModel)]="this.dataApi.selectedBook.titulo">
-          </div>
-          <div class="form-row">
-            <div class="form-group col-md-6">
-              <label for="">Idioma</label>
-              <select class="form-control" id="idioma" name="idioma" [(ngModel)]="this.dataApi.selectedBook.idioma">
-                <option value="Ingles">Ingles</option>
-                <option value="Castellano">Castellano</option>
-              </select>
-            </div>
-            <div class="form-group col-md-6">
-              <label for="">Precio</label>
-              <input type="number" class="form-control" id="precio" name="precio" placeholder="Precio" [(ngModel)]="this.dataApi.selectedBook.precio">
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="form-group col-md-6">
-              <label for="">Autor</label>
-              <input type="text" class="form-control" id="autor" name="autor" placeholder="Autor" [(ngModel)]="this.dataApi.selectedBook.autor">
-            </div>
-            <div class="form-group col-md-6">
-              <label for="">Oferta</label>
-              <select class="form-control" id="oferta" name="oferta" [(ngModel)]="this.dataApi.selectedBook.oferta">
-                <option value="1">Si</option>
-                <option value="0">No</option>
-              </select>
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="form-group col-md-6">
-              <label for="">Portada</label>
-              <input type="text" class="form-control" id="portada" name="portada" placeholder="Portada" [(ngModel)]="this.dataApi.selectedBook.portada">
-            </div>
-            <div class="form-group col-md-6">
-              <label for="">Link Amazon</label>
-              <input type="text" class="form-control" id="link_amazon" name="link_amazon" placeholder="Link amazon"
-                [(ngModel)]="this.dataApi.selectedBook.link_amazon">
-            </div>
-          </div>
-          <div class="form-group">
-            <textarea class="form-control" name="descripcion" id="descripcion" cols="50" rows="4" [(ngModel)]="this.dataApi.selectedBook.descripcion"></textarea>
-          </div>
-          <button type="submit" class="btn btn-sm btn-primary float-right">Save Book</button>
-        </form>
+      <!-- Campo Oculto de Id -->
+      <input type="hidden" id="bookId" name="bookId" [(ngModel)]="this.dataApi.selectedBook.id">
+
+      <div class="form-group">
+        <label for="">Titulo</label>
+        <input class="form-control" type="text" id="titulo" name="titulo" placeholder="Titulo" [(ngModel)]="this.dataApi.selectedBook.titulo">
       </div>
-    </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="">Idioma</label>
+          <select class="form-control" id="idioma" name="idioma" [(ngModel)]="this.dataApi.selectedBook.idioma">
+            <option value="Ingles">Ingles</option>
+            <option value="Castellano">Castellano</option>
+          </select>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="">Precio</label>
+          <input type="number" class="form-control" id="precio" name="precio" placeholder="Precio" [(ngModel)]="this.dataApi.selectedBook.precio">
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="">Autor</label>
+          <input type="text" class="form-control" id="autor" name="autor" placeholder="Autor" [(ngModel)]="this.dataApi.selectedBook.autor">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="">Oferta</label>
+          <select class="form-control" id="oferta" name="oferta" [(ngModel)]="this.dataApi.selectedBook.oferta">
+            <option value="1">Si</option>
+            <option value="0">No</option>
+          </select>
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="">Portada</label>
+          <input type="text" class="form-control" id="portada" name="portada" placeholder="Portada" [(ngModel)]="this.dataApi.selectedBook.portada">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="">Link Amazon</label>
+          <input type="text" class="form-control" id="link_amazon" name="link_amazon" placeholder="Link amazon"
+            [(ngModel)]="this.dataApi.selectedBook.link_amazon">
+        </div>
+      </div>
+      <div class="form-group">
+        <textarea class="form-control" name="descripcion" id="descripcion" cols="50" rows="4" [(ngModel)]="this.dataApi.selectedBook.descripcion"></textarea>
+      </div>
+      <button type="submit" class="btn btn-sm btn-primary float-right">Save Book</button>
+    </form>
   </div>
 </div>
